# MultiInstance

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: build-macos.yml  build-windows.yml  ci.yml  release.yml
resources/macos/: Info.plist
resources/windows/: app.manifest  app.rc
scripts/: build-macos-universal.sh  build-macos.sh  build-windows.ps1  generate-icons.ps1  generate-icons.sh  installer.iss
src/: main.rs
src/core/: app_state.rs  instance.rs  mod.rs  monitor.rs  process.rs  profile.rs  resource.rs  settings.rs
src/persistence/: database.rs  mod.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/ui/: app.rs  mod.rs  theme.rs
src/ui/components/: instance_card.rs  mod.rs  profile_card.rs  resource_bar.rs  status_badge.rs
src/ui/dialogs/: confirm.rs  edit_instance.rs  edit_profile.rs  instance_details.rs  mod.rs  new_instance.rs  new_profile.rs
src/ui/panels/: dashboard.rs  history.rs  instances.rs  mod.rs  profiles.rs  settings.rs
