[package]
name = "multiinstance"
version = "1.0.0"
edition = "2021"
authors = ["Jack Zhang"]
description = "Run multiple instances of single-instance applications"
license = "MIT"
repository = "https://github.com/multiinstance/multiinstance"

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Async Runtime
tokio = { version = "1.41", features = ["full"] }

# System Information & Process Management
sysinfo = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Time & Date
chrono = { version = "0.4", features = ["serde"] }

# Unique IDs
uuid = { version = "1.11", features = ["v4", "serde"] }

# File System
dirs = "5.0"
notify = "7.0"

# System Tray
tray-icon = "0.19"

# Image handling for icons
image = "0.25"

# Cross-platform open/reveal
open = "5.3"

# Single instance check for MultiInstance itself
single-instance = "0.3"

# File dialogs
rfd = "0.15"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_JobObjects",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
]}
winreg = "0.52"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
cocoa = "0.26"
objc = "0.2"
core-foundation = "0.10"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "2.4"
image = "0.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "multiinstance"
path = "src/main.rs"
